--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "install": "^0.13.0",
     "npm": "^8.5.4",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
